--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
+    "postinstall": "ng build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
