--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
-    "postinstall": "ng build",
+    "start": "node app.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
